# kraftbot

./: .env.example  =3.0.0  CLAUDE.md  Makefile  README.md  analyze_logfire.py  deepseek_week_4.md  demo_logfire_analysis_20250904_112938.md  logfire_analysis_20250904_113244.md  main.py  manual_trace_analysis.py  mcp_protocol_fix.md  pyproject.toml  pytest.ini  qwen_week_4_response.md  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
kraftbot/: __init__.py
kraftbot/cli/: __init__.py  app.py  commands.py  utils.py
kraftbot/config/: __init__.py  settings.py
kraftbot/core/: __init__.py  agent.py  models.py  observability.py
kraftbot/mcp/: __init__.py  manager.py  servers.py
kraftbot/prompts/: aggressive.md  analytical.md  conservative.md  default.md  few_shot.md  kimi_k2.md
kraftbot/utils/: prompt_loader.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli_commands.py
tests/unit/: __init__.py  test_cli_utils.py  test_models.py  test_prompt_loader.py  test_settings.py
