[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kraftbot"
version = "1.0.0"
description = "🚀 Advanced PydanticAI Agent with OpenRouter & MCP Support"
authors = [
    {name = "KraftBot Team", email = "kraftbot@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["ai", "agent", "pydantic", "openrouter", "mcp", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic-ai-slim[mcp]>=0.0.49",
    "openai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "logfire>=0.20.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/example/kraftbot"
Documentation = "https://github.com/example/kraftbot#readme"
Repository = "https://github.com/example/kraftbot.git"
Issues = "https://github.com/example/kraftbot/issues"

[project.scripts]
kraftbot = "kraftbot.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kraftbot*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true